objects/Assessment_Specification__c.object
<CustomObject><fields>
        <fullName>Anonymous_Marking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous Marking</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>Either time (in hours) or size (eg word length)</inlineHelpText>
        <label>Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam Type</label>
        <picklist>
            <picklistValues>
                <fullName>Seen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unseen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Book</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Final_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Assessment</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Module_Version__c</fullName>
        <label>Module Version</label>
        <referenceTo>Module_Version__c</referenceTo>
        <relationshipLabel>Assessment Specifications</relationshipLabel>
        <relationshipName>Assessment_Specifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Narrative__c</fullName>
        <formula>"Logical to be tbc; Logical to be tbc; Logical to be tbc; Logical to be tbc; Logical to be tbc"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Narrative</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Re_sit_Re_submission__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Re-sit or re-submission opportunity</inlineHelpText>
        <label>Re-submission</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Record_No__c</fullName>
        <description>Set by Workflow</description>
        <inlineHelpText>Leave blank on record creation if automatic numbering is required (set by Workflow)</inlineHelpText>
        <label>No.</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Timing__c</fullName>
        <label>Timing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Examination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissertation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>of_Final_Module_Mark__c</fullName>
        <label>% of Final Module Mark</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Assessment Specification</label><nameField>
        <displayFormat>MAS-{000000}</displayFormat>
        <label>Assessment Spec Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Assessment Specifications</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith></CustomObject>